<resources>
    <string name="app_name">SampleCPayAndroid</string>
    <string name="button_request_order">RequestOrder</string>
    <string name="button_inquire_order">InquireOrder</string>
    <string name="reference_id">REFERENCE ID</string>
    <string name="subject">SUBJECT</string>
    <string name="body">BODY</string>
    <string name="amount">AMOUNT</string>
    <string name="currency">CURRENCY</string>
    <string name="trans_currency">TRANS_CURRENCY</string>
    <string name="vendor">VENDOR</string>
    <string name="duplicate">DUPLICATE</string>
    <string name="ipn">IPN URL</string>
    <string name="callback">CALLBACK URL</string>
    <string name="request_order">REQUEST ORDER</string>
    <string name="order_result">ORDER RESULT:</string>
    <string name="inquire_result">INQUIRE RESULT:</string>
</resources>
